# circleci-telegram-notifier

./: README.md  lambda_function.py  pyproject.toml  sample.env  validators.py
src/: settings.py
src/factories/: template_factory.py
src/integrations/circleci/: dataclasses.py  enums.py
src/integrations/telegram/: client.py
src/responses/: classes.py
src/services/: notifier_service.py
src/template/: job.py  ping.py  workflow.py
src/templates/: base.py  job.py  ping.py  workflow.py
